# vcodex

./: README.md  build-deb.sh  meson.build  vcodex_0.1.0_amd64.deb
assets/: vcodex.desktop
include/: ai_agent.h  ai_context.h  ai_conversation.h  ai_http.h  ai_panel.h  ai_provider.h  ai_settings.h  ai_tools.h  editor_tab.h  explorer_context_menu.h  git_gutter.h  git_log_view.h  git_manager.h  git_panel.h  git_status_bar.h  lsp_client.h  search_panel.h  terminal_panel.h  vcodex_window.h  vcodex_window_private.h
src/: aether_ide_window.c  aether_ide_window.h  ai_agent.c  ai_context.c  ai_conversation.c  ai_http.c  ai_panel.c  ai_provider.c  ai_settings.c  ai_tools.c  bottom_panel.c  bottom_panel.h  editor_tab.c  explorer_context_menu.c  explorer_dnd.c  explorer_dnd.h  file_explorer.c  file_explorer.h  git_gutter.c  git_log_view.c  git_manager.c  git_panel.c  git_status_bar.c  layout_controls.c  layout_controls.h  lsp_client.c  main.c  meson.build  search_panel.c  terminal_panel.c  theme_manager.c  vcodex_window.c
